generating random Password

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <div>
   <label>Enter The Length</label>
-  <input (input)="onChangeLength($event)" />
+  <input type="text" (input)="onChangeLength($event)" />
 </div>
 
 <div>
