add footer and designe changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,3 +52,15 @@
     </div>
   </div>
 </div>
+
+<footer class="footer custome-footer">
+  <div class="content has-text-centered">
+    <p>
+      <strong>Password Generator</strong> by
+      <a target="_blank" href="https://github.com/noubarkalost/PWA"
+        >Noubar Kalost</a
+      >.
+      {{ footerDate }}
+    </p>
+  </div>
+</footer>
