--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 @import "bulma/css/bulma.css";
+body {
+  position: relative;
+  height: 100vh;
+  padding: 50px 0 0;
+}
+
+.custome-footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
