--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="columns is-centered">
-    <div class="box column is-one-third">
+    <div class="box">
       <h1 class="title has-text-centered">Password Generator</h1>
 
       <div class="field">
