--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 body {
   position: relative;
   height: 100vh;
-  padding: 50px 0 0;
+  padding: 50px 20px 0;
 }
 
 .custome-footer {
@@ -11,4 +11,13 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
+}
+
+.container {
+  width: 100%;
+  max-width: 640px;
+}
+
+.box {
+  width: 100%;
 }
