Add alert and design fixes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -80,3 +80,7 @@
     </p>
   </div>
 </footer>
+
+<div class="alert-container" [ngClass]="isCopied ? 'show' : ''">
+  <p class="alert-message">Your password was copied</p>
+</div>
