--- a/src/styles.css
+++ b/src/styles.css
@@ -28,3 +28,27 @@ body {
 .copy-password {
   margin-top: 20px;
 }
+
+.alert-container {
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  background: #4caf50;
+  border-radius: 10px;
+  padding: 20px;
+  width: 300px;
+  top: 30px;
+  right: -400px;
+  opacity: 0;
+  transition: all 0.3s ease;
+}
+
+.show {
+  right: 20px;
+  opacity: 1;
+}
+
+.alert-message {
+  color: #fff;
+  font-weight: bold;
+}
