--- a/src/styles.css
+++ b/src/styles.css
@@ -52,3 +52,15 @@ body {
   color: #fff;
   font-weight: bold;
 }
+
+.hidden {
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.5s ease;
+}
+
+.visible {
+  margin-top: 20px;
+  opacity: 1;
+  visibility: visible;
+}
