--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,7 +52,7 @@
         Generate!
       </button>
 
-      <div class="box hidden" [ngClass]="password ? 'visible' : 'hidden'">
+      <div class="hidden box" [ngClass]="password ? 'visible' : 'hidden'">
         <label>Your Password</label>
         <input class="input" [value]="password" />
         <div class="columns is-centered">
